[gd_scene load_steps=26 format=3 uid="uid://8htu4ebdus28"]

[ext_resource type="Script" uid="uid://4samp2ba31k2" path="res://Bosses/LaserBeam/Effects/Beam/light_beam.gd" id="1_crlx4"]
[ext_resource type="Texture2D" uid="uid://dpmcnlfal8sgx" path="res://TestEffects/Ultimate Laser Pack/Laser_Beam_Spritesheet_PURPLE.png" id="1_r5262"]
[ext_resource type="Script" uid="uid://cm3yesdavn8r8" path="res://NotResolvedYet/parry_tag_area.gd" id="3_3x503"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crlx4"]
size = Vector2(132, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x503"]
atlas = ExtResource("1_r5262")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hcnt"]
atlas = ExtResource("1_r5262")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhqjj"]
atlas = ExtResource("1_r5262")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o17k3"]
atlas = ExtResource("1_r5262")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_41ufc"]
atlas = ExtResource("1_r5262")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h86r"]
atlas = ExtResource("1_r5262")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip5c8"]
atlas = ExtResource("1_r5262")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjdgu"]
atlas = ExtResource("1_r5262")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjlfk"]
atlas = ExtResource("1_r5262")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_klv4b"]
atlas = ExtResource("1_r5262")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_htdwt"]
atlas = ExtResource("1_r5262")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_823lv"]
atlas = ExtResource("1_r5262")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s22w"]
atlas = ExtResource("1_r5262")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1xbb"]
atlas = ExtResource("1_r5262")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4ej"]
atlas = ExtResource("1_r5262")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_msivh"]
atlas = ExtResource("1_r5262")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ork"]
atlas = ExtResource("1_r5262")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d82f8"]
atlas = ExtResource("1_r5262")
region = Rect2(144, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_lq5hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x503")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hcnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhqjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o17k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41ufc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h86r")
}],
"loop": false,
"name": &"Charge",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip5c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjdgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjlfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klv4b")
}],
"loop": false,
"name": &"Fade",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htdwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_823lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s22w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1xbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj4ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msivh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ork")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d82f8")
}],
"loop": true,
"name": &"Fire",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3x503"]
size = Vector2(14.9736, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hcnt"]
size = Vector2(20, 34)

[node name="LightBeam" type="Area2D"]
scale = Vector2(7.28079, 2.12)
script = ExtResource("1_crlx4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_crlx4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(8.17708, 5.75)
sprite_frames = SubResource("SpriteFrames_lq5hk")
animation = &"Fire"
frame = 7

[node name="ParryTagArea" type="Area2D" parent="." groups=["parryable"]]
position = Vector2(23, -1)
scale = Vector2(8.86254, 4.76668)
script = ExtResource("3_3x503")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryTagArea"]
position = Vector2(-2.51319, 0)
shape = SubResource("RectangleShape2D_3x503")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(23, -1)
scale = Vector2(0.950555, 0.905661)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-23, 0.999999)
scale = Vector2(6.37854, 1.60196)
shape = SubResource("RectangleShape2D_2hcnt")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
